# NestedLatticeLut

./: README.md
simulation/: README.md  adaptive_encoding.py  adaptive_simulation.py  encoder.py  main.py  requirements.txt  simulation.py
src/: CMakeLists.txt  benchmark.c  decoder.c  decoder.h  encoded_vectors.c  encoded_vectors.h  encoder.c  encoder.h  generate_vectors.py  lut.c  lut.h  matrix_ops.c  matrix_ops.h  utility.c  utility.h
